# LET-NET2

./: .gitignore  Dockerfile  LICENSE  README.md  lk.py  model.py  tartanair.py  train.py
VINS/: Dockerfile
VINS/VINS-Fusion/config/euroc/: euroc_stereo_imu_config.yaml
VINS/VINS-Fusion/config/uma/: cam0_pinhole.yaml  cam0_pinhole2.yaml  cam1_pinhole.yaml  cam1_pinhole2.yaml  cam1_pinhole3.yaml  uma_mono_imu_config.yaml  uma_stereo_config.yaml  uma_stereo_imu_config.yaml
VINS/VINS-Fusion/vins_estimator/: CMakeLists.txt
VINS/VINS-Fusion/vins_estimator/src/: deepseaTest.cpp  rosNodeTest.cpp  umaviTest.cpp
VINS/VINS-Fusion/vins_estimator/src/estimator/: parameters.cpp  parameters.h
VINS/VINS-Fusion/vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h  sparse_flow.cpp  sparse_flow.hpp
VINS/VINS-Fusion/weight/: export.py
interface/: Dockerfile
interface/cpp_ncnn/: CMakeLists.txt  main.cpp  tracking.cpp  tracking.h
interface/cpp_ncnn/weights/: letnet_480x640.ncnn.param
interface/cpp_tensorrt/: CMakeLists.txt  main.cpp  tracking_trt.cpp  tracking_trt.h
interface/cpp_tensorrt/weights/: letnet_480x640.engine
interface/python/: demo.py  export.py
weight/: letnet2.pth
